Display correctly on iOS, rm numbers containing zeros

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,12 @@
 /* TODO: make ten and number not scroll */
-
 html {
     font-family: sans-serif;
     text-align: center;
-    
 }
 
 body {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 #top {
@@ -18,7 +16,7 @@ body {
     left: 0;
     right: 0;
     height: 150px;
-
+    background-color: #f5f5f5f2;
     background-color: oklch(95% 0 0 / 0.8);
     backdrop-filter: blur(10px);
 }
@@ -28,22 +26,20 @@ body {
     padding-top: 150px;
     padding-bottom: 270px;
     width: 200px;
-
-    
 }
 
 #keyboard {
     margin: 0 auto;
     position: fixed;
-    
     height: 260px;
     width: 322px;
     left: 0px;
     right: 0px;
     bottom: 0px;
     background-color: oklch(95% 0 0 / 0.8);
+    background-color: #eeeeeecc;
+    
     backdrop-filter: blur(10px);
-
     border-radius: 6px;
 }
 
@@ -68,21 +64,19 @@ h1 {
     line-height: 50px;
     font-size: 40px;
     background-color: hsl(84, 50%, 85%);
-
+    font-family: monospace;
     margin-top: 10px;
     border-radius: 6px;
 }
 
 input {
     /* takes care of input being wider */
-    box-sizing:border-box;
+    box-sizing: border-box;
     width: 100%;
-
-
     height: 50px;
     font-size: 40px;
+    font-family: monospace;
     background-color: hsl(0, 0%, 90%);
-
     margin-top: 10px;
     border-radius: 6px;
     border: 2px solid black;
@@ -97,7 +91,6 @@ input {
     height: 50px;
     user-select: none;
     background-color: hsl(0, 0%, 90%);
-
     margin-top: 10px;
     border-radius: 6px;
 }
@@ -107,7 +100,6 @@ input {
     line-height: 50px;
     font-size: 40px;
     background-color: hsl(0, 100%, 90%);
-
     margin-top: 10px;
 }
 
@@ -117,41 +109,55 @@ input {
 }
 
 button {
+    color: #000000;
     background-color: oklch(99% 0 0);
+    background-color: #fcfcfc;
     border: 2px solid grey;
     border-radius: 6px;
 }
 
 button:disabled {
     color: oklch(0% 0 0/0.1);
+    color: #0000001a;
     background-color: oklch(99% 0 0 /0.1);
+    background-color: #fcfcfc1a;
     border-color: oklch(60% 0 0 /0.1);
+    border-color: #8080801a;
 }
 
 .key.cmd:disabled, .key.num:disabled {
     color: oklch(0% 0 0 /0.1);
+    color: #0000001a;
+    
     background-color: oklch(99% 0 0 / 0.1);
+    background-color: rgb(252 252 252 / 10%);
+    
     border-color: oklch(60% 0 0 / 0.1);
+    border-color: #8080801a;
 }
 
 .key {
     font-size: 30px;
+    padding: 0px;
     width: 48px;
     height: 48px;
-    margin:6px;
-
+    margin: 6px;
     border: 2px solid grey;
     border-radius: 6px;
 }
 
-
-
 .key.num, .key.cmd {
     background-color: oklch(99% 0 0);
+    background-color: #fcfcfc;
+    
     border-color: oklch(60% 0 0);
+    border-color: #808080;
 }
 
 .key.op {
     background-color: oklch(90% 0 0);
+    background-color: #dedede;
+    
     border-color: oklch(50% 0 0);
+    border-color: #636363;
 }
